<resources>
    <string name="app_name">MyContacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="last_name">Last Name :</string>
    <string name="first_name">First Name :</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="search_contacts">Search Contacts</string>
</resources>
