<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:titleTextColor="@color/white"
        app:title="Contact Details"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>



        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/first_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            android:labelFor="@id/firstNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/firstNameTv"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="10dp"
        android:text="@string/last_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent"
        android:labelFor="@id/lastNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/lastNameTv"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="10dp"
        android:text="@string/phone_number"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent"
        android:labelFor="@id/phoneNumberTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/phoneNumberTv"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="10dp"
        android:text="@string/email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent"
        android:labelFor="@id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/emailTv"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




    <Button
        android:id="@+id/editContactBtn"
        android:text="@string/edit_contact"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/deleteContactBtn"
        android:text="@string/delete_contact"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
